# aigrad

./: .gitignore  README.md
code/: analyze.py  pyproject.toml  scraping.py
gradu/: NOTES.md  journals.md  mapping_process.md  material_search.xlsx  research_questions.md  seachterms.xlsx  thesisReferences.bib  thesis_kumpulainen.tex  thesis_kumpulainen.xmpdata
gradu/images/: petersen_model.afdesign
gradu/material/: ICAGI.csv  ICAGI.xlsx  articles_combined.xlsx  final_results.xlsx  scopus_ai_jair_ijcai.xlsx  seachterms.xlsx
gradu/material/data/: accepted_papers.csv  country_data.csv  country_data_desc.csv
latex-examples/: enthesis.tex  malliopas.tex  progradu_MariKasanen.tex  readme.md
method-papers/: Kirjallisuuskatsauksesta.pptx
plan/: gradu3.cls  plan_references.bib  thesis_plan.tex  thesis_plan_kumpulainen.tex
