[tool.poetry]
name = "aigrad"
version = "0.1.0"
description = ""
authors = ["Samu <onesamu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
openpyxl = "^3.0.5"
nltk = "^3.5"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
pandas = "^1.1.5"
seaborn = "^0.11.0"
matplotlib-venn = "^0.11.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
